<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.ocean.ape</groupId>
    <artifactId>tomato</artifactId>
    <version>1.0-SNAPSHOT</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>15</maven.compiler.release>
        <javafx.version>15</javafx.version>
        <javafx.maven.plugin.version>0.0.5</javafx.maven.plugin.version>
        <mainClass>org.ocean.ape.AppStart</mainClass>
        <mainClassPath>org/ocean/ape/tomato/App.class</mainClassPath>
        <exec.maven.plugin.version>1.6.0</exec.maven.plugin.version>
        <app.version>1.0.0</app.version>
        <springboot-javafx.version>2.1.7-SNAPSHOT</springboot-javafx.version>
        <springboot.version>2.4.5</springboot.version>
        <slf4j.version>2.0.0-alpha1</slf4j.version>
        <moduleName>ape.tomato</moduleName>
        <maven-compiler-version>3.8.1</maven-compiler-version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>de.roskenet</groupId>
            <artifactId>springboot-javafx-support</artifactId>
            <version>${springboot-javafx.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-api</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
            <version>${springboot.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
    </dependencies>
    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>**/**</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-version}</version>
                <configuration>
                    <release>${maven.compiler.release}</release>
                    <source>${maven.compiler.release}</source>
                    <target>${maven.compiler.release}</target>
                    <debug>true</debug>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.1.1</version>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/modules</outputDirectory>
                            <includeScope>runtime</includeScope>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>${javafx.maven.plugin.version}</version>
                <executions>
                    <execution>
                        <id>Build Native Mac App</id>
                    </execution>
                </executions>
                <configuration>
                    <stripDebug>true</stripDebug>
                    <compress>2</compress>
                    <noHeaderFiles>true</noHeaderFiles>
                    <noManPages>true</noManPages>
                    <release>${maven.compiler.release}</release>
                    <jlinkImageName>${project.artifactId}</jlinkImageName>
                    <launcher>${project.artifactId}</launcher>
                    <mainClass>${moduleName}/${mainClass}</mainClass>
                    <jmodsPath>${project.build.directory}/modules</jmodsPath>
                    <options>
                        <!--<option>-agentlib:jdwp=transport=dt_socket,address=8001,server=y,suspend=y</option>-->
                        <option>--add-opens</option>
                        <option>java.base/java.lang=spring.core</option>
                    </options>
                    <commandlineArgs>-Xmx2048m</commandlineArgs>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>exec-maven-plugin</artifactId>
                <groupId>org.codehaus.mojo</groupId>
                <version>${exec.maven.plugin.version}</version>
                <executions>
                    <execution>
                        <id>Build Native Mac App</id>
                        <phase>install</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <workingDirectory>${project.basedir}</workingDirectory>
                    <executable>./build_app.sh</executable>
                    <environmentVariables>
                        <APP_VERSION>${app.version}</APP_VERSION>
                        <JAVA_VERSION>${maven.compiler.release}</JAVA_VERSION>
                        <PROJECT_VERSION>${project.version}</PROJECT_VERSION>
                        <!--<MAIN_CLASS>${moduleName}/${appStart}</MAIN_CLASS>-->
                        <MAIN_CLASS>${mainClass}</MAIN_CLASS>
                        <MAIN_CLASS_PATH>${mainClassPath}</MAIN_CLASS_PATH>
                        <JAVA_HOME>${java.home}</JAVA_HOME>
                        <APP_NAME>${project.artifactId}</APP_NAME>
                        <MAIN_JAR>${project.artifactId}-${project.version}.jar</MAIN_JAR>
                    </environmentVariables>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <repositories>
        <repository>
            <id>maven-ali</id>
            <url>https://maven.aliyun.com/nexus/content/groups/public//</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>always</updatePolicy>
                <checksumPolicy>fail</checksumPolicy>
            </snapshots>
        </repository>
    </repositories>
</project>
